2003-10-03  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/image.c, magick/image.h: Updated AddCoderOptions to
	accept "flag" keys that have no values. They are placed in the
	coder options map with an empty, zero length string value. Option
	argument syntax is now: "key1[=[value1]],key2[=[value2]],..."

2003-10-03  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/command.c: Updated +coder-options option to not clear the
	entire map of coder options, but accept a list of names to remove
	from the map. Use option argument "*" to clear the entire map of
	coder options.
	* magick/image.c, magick/image.h: Added function
	RemoveCoderOptions. Added cast of signed char to unsigned char and
	int in calls to isspace and isprint.
	* magcik/utility.c: Added cast of signed char to unsigned char and
	int in calls to isspace and isprint. Added special handling of
	+coder-options option in ExpandFilenames function.

2003-10-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/reference/read/input_tim.miff: The TIM read results
	changed somewhat due to Glenn's ScaleColor5to8 fix.

2003-10-01  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

        * Revised ScaleColor5to8 and ScaleColor6to8 macros to fill in
	the low bytes.
	* coders/bmp.c (ReadBMPImage): scaling of 8-8-8-8-bit images was
	also slightly incorrect.

2003-09-30  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* coders/bmp.c (ReadBMPImage): scaling of 5-5-5-bit and 5-6-5-bit
	images was slightly incorrect.

2003-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): When using the generic bit-stream
	marshaller to read colormapped/gray images, the slight performance
	improvement from creating a special case for matte images did not
	justify almost doubling the amount of code.  Therefore, the two
	loops are combined back into one.

2003-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fixed reading grayscale TIFFs